# sd_external_msgs

./: CMakeLists.txt  README.md  package.xml
action/: TaskExecution.action
examples/: test_client.py  test_server.py
msg/: BoundingBox2DArray.msg  Gripper.msg  Weight.msg
srv/: GripperControl.srv
